# nestopia-vita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/common/romfs/skins/default/: config.cfg
scripts/: fix-vita-package-pngs.sh
src/: main.cpp  main.h  nestopia_vita_config.cpp  nestopia_vita_config.h  nestopia_vita_io.h  nestopia_vita_jg_bridge.cpp  nestopia_vita_jg_bridge.h  nestopia_vita_paths.cpp  nestopia_vita_ui_emu.cpp  nestopia_vita_ui_emu.h  nestopia_vita_ui_video.cpp  rgui_binding_prompt.cpp  rgui_binding_prompt.h  rgui_cheats.cpp  rgui_cheats.h  rgui_controls.cpp  rgui_controls.h  rgui_filebrowser.cpp  rgui_filebrowser.h  rgui_hotkeys.cpp  rgui_hotkeys.h  rgui_main.cpp  rgui_main.h  rgui_menu.cpp  rgui_menu.h  rgui_state.cpp  rgui_state.h  rgui_theme.h
src/runtime/: CMakeLists.txt  game_types.h  load_error.cpp  load_error.h  pemu_config.cpp  pemu_config.h  runtime.h  skin.cpp  skin.h  ui_emu.cpp  ui_emu.h  ui_main.cpp  ui_main.h  ui_progressbox.cpp  ui_progressbox.h  ui_status_box.cpp  ui_status_box.h  ui_video.cpp  ui_video.h
src/runtime/skin/: SkinnedRectangle.cpp  SkinnedRectangle.h  SkinnedText.cpp  SkinnedText.h
